--- a/.classpath
+++ b/.classpath
@@ -1,11 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/jdk1.7.0_21">
-		<attributes>
-			<attribute name="owner.project.facets" value="java"/>
-		</attributes>
-	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jst.server.core.container/org.eclipse.jst.server.tomcat.runtimeTarget/Apache Tomcat v7.0">
 		<attributes>
 			<attribute name="owner.project.facets" value="jst.web"/>
@@ -35,6 +30,7 @@
 	<classpathentry kind="lib" path="C:/Users/caranthir/Documents/workspace3/BakkArbeit.Server2/WebContent/WEB-INF/lib/oauth-signature-1.17.1.jar"/>
 	<classpathentry kind="lib" path="C:/Users/caranthir/Documents/workspace3/BakkArbeit.Server2/lib/commons-codec-1.8.jar"/>
 	<classpathentry kind="lib" path="C:/Users/caranthir/Documents/workspace3/BakkArbeit.Server2/WebContent/WEB-INF/lib/mimepull-1.6.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/jdk1.7.0_55"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/EclipseLink">
 		<attributes>
 			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
